# eds-central-database

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: documentation.yml  linting.yml
assets/stylesheets/: cards.css  giscus_dark.css  giscus_light.css  style.css
data_catalog/: index.html
docs/: SUMMARY.md  index.md
docs/data_catalog/: SUMMARY.md  index.md
docs_includes/: glossary.md
docs_includes/material/overrides/: main.html
docs_includes/material/overrides/partials/: comments.html
scripts/: cards.py
search/: search_index.json
